# git-versioner

./: .dockerignore  .git-versioner.toml  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  action.yml  entrypoint.sh  package.json
.github/: renovate.json
.github/workflows/: docs.yml  release.yml  renovate.yml  rust.yml
docs/: index.md  package-lock.json  package.json  trunk_based_development_without_commit_message_incrementing_test_full_workflow.md  trunk_based_development_without_commit_message_incrementing_test_full_workflow_with_feature_branches.md
docs/.vitepress/: config.mts
src/: config.rs  format_parser.rs  lib.rs  main.rs
src/exporter/: mod.rs
tests/: approved.rs  branches.rs  calendar_version.rs  cli_no_configuration.rs  cli_with_configuration.rs  common.rs  lib.rs  main.rs  patch_pre_release_tag.rs  remote_repository.rs  trunk_based_development_versioning.rs  trunk_based_development_with_commit_message_incrementing.rs  trunk_based_development_with_continuous_delivery.rs  trunk_based_development_with_release_branches.rs  trunk_based_development_without_commit_message_incrementing.rs  trunk_based_development_without_continuous_delivery.rs  trunk_based_development_without_release_branches.rs
tests/cli/: mod.rs
tests/common/: mod.rs
tests/snapshots/: approved__configuration-2.snap  approved__configuration-3.snap  approved__configuration_toml.snap  approved__configuration_yaml.snap  approved__configuration_yml.snap  approved__environment_variable_output_in_github_context.snap  approved__environment_variable_output_in_gitlab_context.snap  (+48 more)
