[package]
name = "git-versioner"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20.2"
semver = "1.0.20"
clap = { version = "4.4.11", features = ["derive"] }
regex = "1.10.2"
anyhow = "1.0.75"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.8"
serde_yaml = "0.9.27"

[dev-dependencies]
tempfile = "3.8.1"
rstest = "0.25.0"
insta = "1.43.1"
insta-cmd = "0.6.0"
